Change History
--------------

This file contains a list of all changes starting after the release of
sox-11gamma.

sox-12.17.4
-----------
  o Peter Nyhlen fixed a problem with reading Comments in Ogg Vorbis files.
  o Added install target to allow installing libgsm from main Makefile
    (Leigh Smith).
  o Minor updates to sox.c to free unused memory and close all input
    files during failures.
  o Pieter Krul added a patch that makes play script look at AUDIODEV
    environment variable if it exists to find which device to use.
    This allows scripts to work with Solaris SunRays and is a good idea
    in general.
  o Updated config.sub to detect latest supported OS's.
  o Fabrizio Gennari added support for reading and writing
    MP3 files using the external libraries libmad and libmp3lame.
  o Jens Henrik Goebbert sent in several bugfixes for integer overflows
    in the compand effect.
  o Dan Dickerman sent in patches for integer overflows in the resample
    effect.
  o Jimen Ching sent in a fix for multi-channel sound file processing
    using the avg effect.
  o Richards Bannister added patches to clean up prototypes and filter
    private sizes being to small.
  o Jimen Ching adds -d option to specify 64bit data size and changed
    Ulaw/Alaw encoding to default to 8bit data size if not specified.
  o Bert van Leeuwen added a file handler for Psion record.app used
    for System/Alarms in some Psion devices.

sox-12.17.3
-----------
  o Removed check that prevented pan from being invoked when the
    input and output channels were the same.
  o Ciaran Anscomb added a flush to sunaudio driver after changing
    settings.  This is because it can start buffering data as soon
    as the device is open and the buffered data can be in a
    wrong format.
  o trim wasn't accounting for # of channels and was generally broken.
  o Jeff Bonggren fixed trim bugs were it was failing when triming
    data that equaled to BUFSIZ.  Also, trim now immediately returns